# parquet-dumper

./: Cargo.toml  README.md
src/: entities.rs  error.rs  main.rs  parquet.rs  sqlite.rs
