[package]
name = "parquet-dumper"
description = "A command line inteface tool for dumping substrate-archive data from postgresql to parquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow2 = { version = "0.13.1", features = [ "io_parquet", "io_parquet_compression", "compute" ] }
clap = { version = "3.2.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eth-archive-parquet-writer = { path = "../eth-archive/parquet-writer/" }
tokio = { version = "1.18.0", features = ["full"] }
